--- a/DIPLOMSKI/Presentation/Presentation.csproj
+++ b/DIPLOMSKI/Presentation/Presentation.csproj
@@ -231,6 +231,7 @@
     <Compile Include="Controllers\PorudzbinasController.cs" />
     <Compile Include="Controllers\RestoransController.cs" />
     <Compile Include="Controllers\SastojaksController.cs" />
+    <Compile Include="Controllers\SearchController.cs" />
     <Compile Include="Controllers\Stavka_menijaController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Controllers\ZaposlenisController.cs" />
@@ -241,6 +242,7 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Providers\AddCustomHeaderFilter.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
     <Compile Include="Startup.cs" />
