--- a/DIPLOMSKI/DAL/DAL.csproj
+++ b/DIPLOMSKI/DAL/DAL.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Providers\DnevniIzvestajProvider.cs" />
     <Compile Include="Providers\DobavljacRobeProvider.cs" />
     <Compile Include="Providers\DostavaProvider.cs" />
     <Compile Include="Providers\DostavljacProvider.cs" />
