--- a/DIPLOMSKI/Presentation/Presentation.csproj
+++ b/DIPLOMSKI/Presentation/Presentation.csproj
@@ -216,6 +216,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\DnevniIzvestajController.cs" />
     <Compile Include="Controllers\Dobavljac_robeController.cs" />
     <Compile Include="Controllers\DostavasController.cs" />
     <Compile Include="Controllers\DostavljacsController.cs" />
